<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".view.auth.signin.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">


        <ProgressBar
            android:id="@+id/loading_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/password_editTextLayout"
            app:layout_constraintStart_toStartOf="@id/password_editTextLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/signin_txt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/sign_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintWidth_percent="0.6" />

        <TextView
            android:id="@+id/account_error_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/red_error"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/signin_txt"
            app:layout_constraintTop_toBottomOf="@id/signin_txt" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue_dark"
            android:hint="@string/phone"
            app:hintTextColor="@color/blue_dark"
            app:layout_constraintTop_toBottomOf="@id/account_error_txt"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:inputType="phone"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_editTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue_dark"
            android:hint="@string/password"
            app:hintTextColor="@color/blue_dark"
            app:layout_constraintTop_toBottomOf="@id/phoneEditTextLayout"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signin_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintWidth_percent="0.6"
            android:background="@drawable/colored_button_background"
            android:elevation="5dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_editTextLayout"
            app:layout_constraintVertical_bias="0.28" />


        <TextView
            android:id="@+id/have_account_txt"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/donnothaveaccount"
            app:layout_constraintStart_toStartOf="@id/signin_button"
            app:layout_constraintTop_toBottomOf="@id/signin_button" />

        <TextView
            android:id="@+id/signupTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/have_account_txt"
            app:layout_constraintTop_toTopOf="@id/have_account_txt"
            android:textColor="@color/blue_dark"
            android:layout_marginStart="10dp"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>