<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".view.auth.signup.SignUpActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/signup_txt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/sign_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintWidth_percent="0.6" />

        <TextView
            android:id="@+id/account_error_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/red_error"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/signup_txt"
            app:layout_constraintTop_toBottomOf="@id/signup_txt" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue_dark"
            android:hint="@string/name"
            app:hintTextColor="@color/blue_dark"
            app:layout_constraintTop_toBottomOf="@+id/account_error_txt"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/display_name_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue_dark"
            android:hint="@string/phone"
            app:hintTextColor="@color/blue_dark"
            app:layout_constraintTop_toBottomOf="@+id/nameEditTextLayout"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:inputType="phone"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/phone_error_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/red_error"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/phoneEditTextLayout"
            app:layout_constraintTop_toBottomOf="@id/phoneEditTextLayout" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue_dark"
            android:hint="@string/password"
            app:hintTextColor="@color/blue_dark"
            app:layout_constraintTop_toBottomOf="@+id/phone_error_txt"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:backgroundTint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/password_error_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/red_error"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/passwordEditTextLayout"
            app:layout_constraintTop_toBottomOf="@id/passwordEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue_dark"
            android:hint="@string/confirm_password"
            app:hintTextColor="@color/blue_dark"
            app:layout_constraintTop_toBottomOf="@id/password_error_txt"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/retype_password_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:backgroundTint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/confirm_pass_error_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/red_error"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/confirmPasswordEditTextLayout"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordEditTextLayout" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintWidth_percent="0.6"
            android:background="@drawable/colored_button_background"
            android:elevation="5dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.433"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_pass_error_txt"
            app:layout_constraintVertical_bias="0.1" />


        <ProgressBar
            android:id="@+id/loading_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/passwordEditTextLayout"
            app:layout_constraintStart_toStartOf="@id/passwordEditTextLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />


        <TextView
            android:id="@+id/have_account_txt"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:text="@string/alreadyhaveaccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_button" />

        <TextView
            android:id="@+id/signin_txt"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:text="@string/sign_in"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/have_account_txt"
            app:layout_constraintStart_toEndOf="@+id/have_account_txt"
            android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>